src/index.css
body {
  margin: 0;
  font-family: 'Lato', sans-serif !important;
  font-size: 1.1rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1.5715;
}

p {
  font-size: 1rem !important;
}

h1 {
  font-size: 1.4rem !important;
  font-weight: normal;
}

#root {
  height: 100%;
}

.ant-layout {
  font-family: 'Lato', serif !important;
  font-size: 1.1rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.ant-layout-header {
  background: white;
  margin-bottom: 2px;
  height: 136px;
}

.ant-tooltip-inner {
  width: 400px;
}

.logo {
  float: left;
}

.tooltip-data {
  vertical-align: top;
  padding: 4px;
}

#map {
  font-size: 1rem;
  width: 300px;
  height: 420px;
}

